syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/MsgChat.proto

import "Role.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "MsgChatProto";

enum RequestType{
    CHAT = 0;
    CHATG = 1;
    MSG = 2;
}

message RequestChat{
    int64 userId = 1;
    int64 roleId = 2;
    string content = 3;

    RequestType type = 4;
}

message ResponseChat{
    int32 result = 1;
    string content = 2;
    RequestType type = 3;

    // 消息
    string msg = 4;

    Role role = 5;
}