syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/MsgMall.proto

import "Commodity.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "MsgMallProto";

enum RequestType{
    MALL = 0;
    BUY = 1;
}

message RequestMall{
    int64 userId = 1;
    int64 cId = 2;
    int32 num = 3;

    RequestType type = 4;
}

message ResponseMall{
    int32 result = 1;
    string content = 2;
    RequestType type = 3;

    repeated Commodity commodity = 4;
}